--- a/.eslintrc
+++ b/.eslintrc
@@ -41,8 +41,12 @@
     //     "endOfLine": "auto"
     //   }
     // ], // Avoid conflict rule between Prettier and Airbnb Eslint
+    "jsx-quotes": [
+      "error",
+      "prefer-double"
+    ],
     "@typescript-eslint/no-var-requires": "error",
-    "@typescript-eslint/unbound-method": "error",
+    "@typescript-eslint/unbound-method": "off",
     "@typescript-eslint/restrict-plus-operands": "error",
     "@typescript-eslint/no-unsafe-member-access": "error",
     "@typescript-eslint/no-floating-promises": "off",
