--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "lint:fix": "tsc && yarn run lint --fix"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/theme": "^2.2.6",
     "clsx": "^2.1.1",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
+    "framer-motion": "^11.3.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-intl": "^3.15.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -24,8 +29,6 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
@@ -36,10 +39,12 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-unused-imports": "^4.0.0",
     "next-sitemap": "^4.2.3",
+    "postcss": "^8",
     "sass": "^1.77.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "author": "Cyberantis",
+  "author": "Anton Panchenko",
   "license": "GPL",
   "repository": {
     "type": "git",
