--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-intl": "^3.15.3",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
