--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/theme": "^2.2.6",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "clsx": "^2.1.1",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
@@ -22,7 +25,10 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "remove": "^0.1.5",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -42,7 +48,6 @@
     "next-sitemap": "^4.2.3",
     "postcss": "^8",
     "sass": "^1.77.6",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "author": "Anton Panchenko",
