--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,46 +1,47 @@
 {
-  // Configuration for JavaScript files
   "extends": [
+    "airbnb",
     "airbnb-base",
     "airbnb-typescript",
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:react/all",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "next/core-web-vitals", // Needed to avoid warning in next.js build: 'The Next.js plugin was not detected in your ESLint configuration'
-    "plugin:import/typescript"
+    "plugin:react/recommended",
+    "plugin:tailwindcss/recommended",
+    "next/core-web-vitals",
+    "plugin:prettier/recommended"
   ],
-  "globals": {
-    "React": true,
-    "JSX": true
-  },
+  "plugins": [
+    "@typescript-eslint",
+    "import",
+    "unused-imports",
+    "tailwindcss"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
     "ecmaVersion": 2022,
-    "project": [
-      "./tsconfig.json"
-    ],
+    "project": "./tsconfig.json",
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "react-hooks",
-    "import",
-    "unused-imports",
-    "@typescript-eslint"
-  ],
-  "root": true,
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "globals": {
+    "React": true,
+    "JSX": true
+  },
   "rules": {
-    // "prettier/prettier": [
-    //   "error",
-    //   {
-    //     "singleQuote": true,
-    //     "endOfLine": "auto"
-    //   }
-    // ], // Avoid conflict rule between Prettier and Airbnb Eslint
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true,
+        "endOfLine": "auto"
+      }
+    ], // Avoid conflict rule between Prettier and Airbnb Eslint
     "jsx-quotes": [
       "error",
       "prefer-double"
@@ -57,7 +58,13 @@
     "@typescript-eslint/restrict-template-expressions": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/comma-dangle": "off", // Avoid conflict rule between Eslint and Prettier
-    "@typescript-eslint/consistent-type-imports": "error", // Ensure `import type` is used when it's necessary
+    "@typescript-eslint/consistent-type-imports": [
+      "error",
+      {
+        "prefer": "type-imports",
+        "disallowTypeAnnotations": false
+      }
+    ],
     "@typescript-eslint/naming-convention": [
       "error",
       {
@@ -165,8 +172,8 @@
     "max-len": [
       "error",
       {
-        "code": 190,
-        "ignorePattern": "^\\s*className=\\"
+        "code": 120,
+        "ignorePattern": "^\\s*(className=|d=)"
       }
     ],
     "react/jsx-max-props-per-line": [
@@ -206,51 +213,34 @@
         "argsIgnorePattern": "^_"
       }
     ]
-  },
-  "settings": {
-    "react": {
-      "version": "18"
-    },
-    "import/parsers": {
-      "@typescript-eslint/parser": [
-        ".ts",
-        ".tsx"
-      ]
-    },
-    "import/resolver": {
-      "typescript": {
-        "paths": "./tsconfig.json",
-        "alwaysTryTypes": true
-      }
-    }
   }
+  // Configuration for testing
+  // {
+  //   "files": ["**/*.test.ts", "**/*.test.tsx"],
+  //   "plugins": ["jest", "jest-formatting", "testing-library", "jest-dom"],
+  //   "extends": [
+  //     "plugin:jest/recommended",
+  //     "plugin:jest-formatting/recommended",
+  //     "plugin:testing-library/react",
+  //     "plugin:jest-dom/recommended"
+  //   ]
+  // },
+  // Configuration for e2e testing (Playwright)
+  // {
+  //   "files": ["**/*.spec.ts"],
+  //   "extends": ["plugin:playwright/recommended"]
+  // },
+  // Configuration for Storybook
+  // {
+  //   "files": ["*.stories.*"],
+  //   "extends": ["plugin:storybook/recommended"],
+  //   "rules": {
+  //     "import/no-extraneous-dependencies": [
+  //       "error",
+  //       {
+  //         "devDependencies": true
+  //       }
+  //     ]
+  //   }
+  // }
 }
-// Configuration for testing
-// {
-//   "files": ["**/*.test.ts", "**/*.test.tsx"],
-//   "plugins": ["vitest", "jest-formatting", "testing-library", "jest-dom"],
-//   "extends": [
-//     "plugin:vitest/recommended",
-//     "plugin:jest-formatting/recommended",
-//     "plugin:testing-library/react",
-//     "plugin:jest-dom/recommended"
-//   ]
-// },
-// Configuration for e2e testing (Playwright)
-// {
-//   "files": ["**/*.spec.ts"],
-//   "extends": ["plugin:playwright/recommended"]
-// },
-// Configuration for Storybook
-// {
-//   "files": ["*.stories.*"],
-//   "extends": ["plugin:storybook/recommended"],
-//   "rules": {
-//     "import/no-extraneous-dependencies": [
-//       "error",
-//       {
-//         "devDependencies": true
-//       }
-//     ]
-//   }
-// }
