--- a/package.json
+++ b/package.json
@@ -40,13 +40,17 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-next": "14.2.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-unused-imports": "^4.0.0",
     "next-sitemap": "^4.2.3",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "sass": "^1.77.6",
     "typescript": "^5"
   },
@@ -55,8 +59,5 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AnthonyPanchenko/TRN.git"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --cache --fix --quiet"
   }
 }
