--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "ESNext",
     "lib": [
       "dom",
       "dom.iterable",
@@ -8,10 +9,11 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -24,10 +26,6 @@
     // "paths": {
     //   "@/*": ["./*"]
     // },
-    "typeRoots": [
-      "oldsrc/types",
-      "./node_modules/@types"
-    ]
   },
   "include": [
     "next-env.d.ts",
@@ -36,9 +34,6 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules",
-    "certificates",
-    "build",
-    ".next"
+    "node_modules"
   ]
 }
