--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -173,6 +173,10 @@
       "error",
       {
         "code": 120,
+        "ignoreUrls": true,
+        "ignoreStrings": true,
+        "ignoreTemplateLiterals": true,
+        "ignoreRegExpLiterals": true,
         "ignorePattern": "^\\s*(className=|d=)"
       }
     ],
